--- a/Tutorial-BSSN_quantities.ipynb
+++ b/Tutorial-BSSN_quantities.ipynb
@@ -9,12 +9,13 @@
     "## Author: Zach Etienne\n",
     "### Formatting improvements courtesy Brandon Clark\n",
     "\n",
-    "<font color='green'>**This module has been verified against a trusted version of the code.**</font>\n",
+    "## This module documents and constructs a number of quantities useful for building symbolic (SymPy) expressions in terms of the core BSSN quantities $\\left\\{h_{i j},a_{i j},\\phi, K, \\lambda^{i}, \\alpha, \\mathcal{V}^i, \\mathcal{B}^i\\right\\}$, as defined  in [Ruchlin, Etienne, and Baumgarte (2018)](https://arxiv.org/abs/1712.07658) (see also [Baumgarte, Montero, Cordero-Carrión, and Müller (2012)](https://arxiv.org/abs/1211.6632)). \n",
     "\n",
+    "**Module Status:** <font color='orange'><b> Self-Validated </b></font>\n",
     "\n",
+    "**Validation Notes:** This tutorial module has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). **Additional validation tests may have been performed, but are as yet, undocumented. (TODO)**\n",
     "\n",
-    "## Introduction:\n",
-    "This module documents and constructs a number of quantities useful for building symbolic (SymPy) expressions in terms of the core BSSN quantities $\\left\\{h_{i j},a_{i j},\\phi, K, \\lambda^{i}, \\alpha, \\mathcal{V}^i, \\mathcal{B}^i\\right\\}$, as defined  in [Ruchlin, Etienne, and Baumgarte (2018)](https://arxiv.org/abs/1712.07658) (see also [Baumgarte, Montero, Cordero-Carrión, and Müller (2012)](https://arxiv.org/abs/1211.6632)). \n",
+    "[comment]: <> (Introduction: TODO)\n",
     "\n",
     "### A Note on Notation:\n",
     "\n",
@@ -54,9 +55,9 @@
     "    1. [Step 7.d](#summing_rbar_terms): Summing the terms and defining $\\bar{R}_{ij}$\n",
     "1. [Step 8](#beta_derivs): **`betaU_derivs()`**: Unrescaled shift vector $\\beta^i$ and spatial derivatives $\\beta^i_{,j}$ and $\\beta^i_{,jk}$\n",
     "1. [Step 9](#phi_and_derivs): **`phi_and_derivs()`**: Standard BSSN conformal factor $\\phi$, and its derivatives $\\phi_{,i}$, $\\phi_{,ij}$, $\\bar{D}_j \\phi_i$, and $\\bar{D}_j\\bar{D}_k \\phi_i$\n",
-    "    1. [Step 9.a](#phi_ito_cf): $\\phi$ in terms of the chosen (possibly non-standard) conformal factor variable $\\text{cf}$ (e.g., $\\text{cf}=W=e^{-4\\phi}$)\n",
+    "    1. [Step 9.a](#phi_ito_cf): $\\phi$ in terms of the chosen (possibly non-standard) conformal factor variable `cf` (e.g., `cf`$=W=e^{-4\\phi}$)\n",
     "    1. [Step 9.b](#phi_covariant_derivs): Partial and covariant derivatives of $\\phi$\n",
-    "1. [Step 10](#code_validation): Code Validation against BSSN.BSSN_quantities NRPy+ module\n",
+    "1. [Step 10](#code_validation): Code Validation against `BSSN.BSSN_quantities` NRPy+ module\n",
     "1. [Step 11](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF\n",
     "\n"
    ]
@@ -183,7 +184,7 @@
     "\\varepsilon_{ij} &= \\text{scalefactor[i]}\\ \\text{scalefactor[j]}\\  h_{ij},\n",
     "\\end{align}\n",
     "\n",
-    "where in this case we *multiply* due to the fact that these tensors are purely covariant (as opposed to contravariant). To slightly simplify the notation, in NRPy+ we define the *rescaling matrices* ReU\\[i\\] and ReDD\\[i\\]\\[j\\], such that\n",
+    "where in this case we *multiply* due to the fact that these tensors are purely covariant (as opposed to contravariant). To slightly simplify the notation, in NRPy+ we define the *rescaling matrices* `ReU[i]` and `ReDD[i][j]`, such that\n",
     "\n",
     "\\begin{align}\n",
     "\\text{ReU[i]} &= 1 / \\text{scalefactor[i]} \\\\\n",
@@ -215,7 +216,7 @@
     "\n",
     "$$\\left\\{h_{i j},a_{i j},\\text{cf}, K, \\lambda^{i}, \\alpha, \\mathcal{V}^i, \\mathcal{B}^i\\right\\},$$ \n",
     "\n",
-    "and *exact* expressions for (spatial) derivatives of scale factors. Note that $\\text{cf}$ is the chosen conformal factor (supported choices for $\\text{cf}$ are discussed in [Step 6.a](#phi_ito_cf)). \n",
+    "and *exact* expressions for (spatial) derivatives of scale factors. Note that `cf` is the chosen conformal factor (supported choices for `cf` are discussed in [Step 6.a](#phi_ito_cf)). \n",
     "\n",
     "As an example, let's evaluate $\\bar{\\Lambda}^{i}_{\\, ,\\, j}$ according to this prescription:\n",
     "\n",
@@ -224,7 +225,7 @@
     "&= -\\frac{\\lambda^i}{(\\text{ReU[i]})^2}\\ \\text{ReUdD[i][j]} + \\frac{\\partial_j \\lambda^i}{\\text{ReU[i]}}.\n",
     "\\end{align}\n",
     "\n",
-    "Here, the derivative $\\text{ReUdD[i][j]}$ **is computed symbolically and exactly** using SymPy, and the derivative $\\partial_j \\lambda^i$ represents a derivative of a *smooth* quantity (so long as $\\bar{\\Lambda}^{i}$ is smooth in the Cartesian basis)."
+    "Here, the derivative `ReUdD[i][j]` **is computed symbolically and exactly** using SymPy, and the derivative $\\partial_j \\lambda^i$ represents a derivative of a *smooth* quantity (so long as $\\bar{\\Lambda}^{i}$ is smooth in the Cartesian basis)."
    ]
   },
   {
@@ -325,7 +326,7 @@
     "&= \\partial_k \\left(\\hat{\\gamma}_{ij} + h_{ij} \\text{ReDD[i][j]}\\right) \\\\\n",
     "&= \\hat{\\gamma}_{ij,k} + h_{ij,k} \\text{ReDD[i][j]} + h_{ij} \\text{ReDDdD[i][j][k]},\n",
     "\\end{align}\n",
-    "where $\\text{ReDDdD[i][j][k]}$ is computed within rfm.reference_metric()."
+    "where `ReDDdD[i][j][k]` is computed within `rfm.reference_metric()`."
    ]
   },
   {
@@ -430,9 +431,9 @@
     "\n",
     "As in [Baumgarte *et al* (2012)](https://arxiv.org/pdf/1211.6632.pdf) generally we make the choice $\\det \\bar{\\gamma}_{ij} = \\det \\hat{\\gamma}_{ij}$, but *this need not be the case; we could choose to set $\\det \\bar{\\gamma}_{ij}$ to another expression.*\n",
     "\n",
-    "In case we do not choose to set $\\det \\bar{\\gamma}_{ij}/\\det \\hat{\\gamma}_{ij}=1$, below we begin the implementation of a gridfunction, $\\text{detgbarOverdetghat}$, which defines an alternative expression in its place. \n",
+    "In case we do not choose to set $\\det \\bar{\\gamma}_{ij}/\\det \\hat{\\gamma}_{ij}=1$, below we begin the implementation of a gridfunction, `detgbarOverdetghat`, which defines an alternative expression in its place. \n",
     "\n",
-    "***$\\det \\bar{\\gamma}_{ij}/\\det \\hat{\\gamma}_{ij}=\\text{detgbarOverdetghat}\\ne 1$ is not yet implemented.*** However, we can define $\\text{detgammabar}$ and its derivatives in terms of a generic $\\text{detgbarOverdetghat}$ and $\\det \\hat{\\gamma}_{ij}$ and their derivatives:\n",
+    "$\\det \\bar{\\gamma}_{ij}/\\det \\hat{\\gamma}_{ij}$=`detgbarOverdetghat`$\\ne 1$ is not yet implemented. However, we can define `detgammabar` and its derivatives in terms of a generic `detgbarOverdetghat` and $\\det \\hat{\\gamma}_{ij}$ and their derivatives:\n",
     "\n",
     "\\begin{align}\n",
     "\\text{detgammabar} &= \\det \\bar{\\gamma}_{ij} = \\text{detgbarOverdetghat} \\cdot \\left(\\det \\hat{\\gamma}_{ij}\\right) \\\\\n",
@@ -671,9 +672,9 @@
    "source": [
     "We next compute three quantities derived above:\n",
     "\n",
-    "* gammabarDD\\_DhatD[i][j][l] = $\\hat{D}_{l} \\bar{\\gamma}_{i j} = \\hat{D}_{l} \\varepsilon_{i j} = \\varepsilon_{i j,l} - \\hat{\\Gamma}^m_{i l} \\varepsilon_{m j} -\\hat{\\Gamma}^m_{j l} \\varepsilon_{i m}$,\n",
-    "* gammabarDD\\_DhatD\\_dD[i][j][l][k] = $\\partial_k \\hat{D}_{l} \\bar{\\gamma}_{i j} = \\partial_k \\hat{D}_{l} \\varepsilon_{i j} = \\varepsilon_{ij,lk} - \\hat{\\Gamma}^m_{i l,k} \\varepsilon_{m j} - \\hat{\\Gamma}^m_{i l} \\varepsilon_{m j,k} - \\hat{\\Gamma}^m_{j l,k} \\varepsilon_{i m} - \\hat{\\Gamma}^m_{j l} \\varepsilon_{i m,k}$, and\n",
-    "* gammabarDD\\_DhatDD[i][j][l][k] = $\\hat{D}_{k} \\hat{D}_{l} \\bar{\\gamma}_{i j} = \\partial_k \\hat{D}_{l} \\varepsilon_{i j} - \\hat{\\Gamma}^m_{lk} \\left(\\hat{D}_{m} \\varepsilon_{i j}\\right)  - \\hat{\\Gamma}^m_{ik} \\left(\\hat{D}_{l} \\varepsilon_{m j}\\right) - \\hat{\\Gamma}^m_{jk} \\left(\\hat{D}_{l} \\varepsilon_{i m}\\right)$."
+    "* `gammabarDD_DhatD[i][j][l]` = $\\hat{D}_{l} \\bar{\\gamma}_{i j} = \\hat{D}_{l} \\varepsilon_{i j} = \\varepsilon_{i j,l} - \\hat{\\Gamma}^m_{i l} \\varepsilon_{m j} -\\hat{\\Gamma}^m_{j l} \\varepsilon_{i m}$,\n",
+    "* `gammabarDD_DhatD\\_dD[i][j][l][k]` = $\\partial_k \\hat{D}_{l} \\bar{\\gamma}_{i j} = \\partial_k \\hat{D}_{l} \\varepsilon_{i j} = \\varepsilon_{ij,lk} - \\hat{\\Gamma}^m_{i l,k} \\varepsilon_{m j} - \\hat{\\Gamma}^m_{i l} \\varepsilon_{m j,k} - \\hat{\\Gamma}^m_{j l,k} \\varepsilon_{i m} - \\hat{\\Gamma}^m_{j l} \\varepsilon_{i m,k}$, and\n",
+    "* `gammabarDD_DhatDD[i][j][l][k]` = $\\hat{D}_{k} \\hat{D}_{l} \\bar{\\gamma}_{i j} = \\partial_k \\hat{D}_{l} \\varepsilon_{i j} - \\hat{\\Gamma}^m_{lk} \\left(\\hat{D}_{m} \\varepsilon_{i j}\\right)  - \\hat{\\Gamma}^m_{ik} \\left(\\hat{D}_{l} \\varepsilon_{m j}\\right) - \\hat{\\Gamma}^m_{jk} \\left(\\hat{D}_{l} \\varepsilon_{i m}\\right)$."
    ]
   },
   {
@@ -786,10 +787,10 @@
     "\\Delta^{k} \\Delta_{(i j) k}  + \\bar{\\gamma}^{k l} \\left (2 \\Delta_{k(i}^{m} \\Delta_{j) m l} + \\Delta_{i k}^{m} \\Delta_{m j l} \\right).\n",
     "$$\n",
     "\n",
-    "* $\\text{DGammaUDD[k][i][j]} = \\Delta^k_{ij}$ is simply the difference in Christoffel symbols: $\\Delta^{k}_{ij} = \\bar{\\Gamma}^i_{jk} - \\hat{\\Gamma}^i_{jk}$, and \n",
-    "* $\\text{DGammaU[k]} = \\Delta^k$ is the contraction: $\\bar{\\gamma}^{ij} \\Delta^{k}_{ij}$\n",
+    "* `DGammaUDD[k][i][j]`$= \\Delta^k_{ij}$ is simply the difference in Christoffel symbols: $\\Delta^{k}_{ij} = \\bar{\\Gamma}^i_{jk} - \\hat{\\Gamma}^i_{jk}$, and \n",
+    "* `DGammaU[k]`$= \\Delta^k$ is the contraction: $\\bar{\\gamma}^{ij} \\Delta^{k}_{ij}$\n",
     "\n",
-    "Adding these expressions to Ricci is straightforward, since $\\bar{\\Gamma}^i_{jk}$ and $\\bar{\\gamma}^{ij}$ were defined above in [Step 4](#bssn_barred_metric__inverse_and_derivs), and $\\hat{\\Gamma}^i_{jk}$ was computed within NRPy+'s reference_metric() function:"
+    "Adding these expressions to Ricci is straightforward, since $\\bar{\\Gamma}^i_{jk}$ and $\\bar{\\gamma}^{ij}$ were defined above in [Step 4](#bssn_barred_metric__inverse_and_derivs), and $\\hat{\\Gamma}^i_{jk}$ was computed within NRPy+'s `reference_metric()` function:"
    ]
   },
   {
@@ -910,14 +911,16 @@
    "source": [
     "<a id='beta_derivs'></a>\n",
     "\n",
-    "# Step 8: betaU_derivs(): The unrescaled shift vector $\\beta^i$ spatial derivatives: $\\beta^i_{,j}$ & $\\beta^i_{,jk}$, written in terms of the rescaled shift vector $\\mathcal{V}^i$ \\[Back to [top](#toc)\\]\n",
+    "# Step 8: **`betaU_derivs()`**: The unrescaled shift vector $\\beta^i$ spatial derivatives: $\\beta^i_{,j}$ & $\\beta^i_{,jk}$, written in terms of the rescaled shift vector $\\mathcal{V}^i$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{beta_derivs}$$\n",
     "\n",
-    "This step, which documents the function betaUbar_and_derivs() inside the BSSN.BSSN_unrescaled_and_barred_vars module, defines three quantities:\n",
+    "This step, which documents the function `betaUbar_and_derivs()` inside the [BSSN.BSSN_unrescaled_and_barred_vars](../edit/BSSN/BSSN_unrescaled_and_barred_vars) module, defines three quantities:\n",
     "\n",
-    "* $\\text{betaU}\\_\\text{dD[i][j]}=\\beta^i_{,j} = \\left(\\mathcal{V}^i \\circ \\text{ReU[i]}\\right)_{,j} = \\mathcal{V}^i_{,j} \\circ \\text{ReU[i]} + \\mathcal{V}^i \\circ \\text{ReUdD[i][j]}$\n",
-    "* $\\text{betaU}\\_\\text{dupD[i][j]}$: the same as above, except using *upwinded* finite-difference derivatives to compute $\\mathcal{V}^i_{,j}$ instead of *centered* finite-difference derivatives.\n",
-    "* $\\text{betaU}\\_\\text{dDD[i][j][k]}=\\beta^i_{,jk} = \\mathcal{V}^i_{,jk} \\circ \\text{ReU[i]} + \\mathcal{V}^i_{,j} \\circ \\text{ReUdD[i][k]} + \\mathcal{V}^i_{,k} \\circ \\text{ReUdD[i][j]}+\\mathcal{V}^i \\circ \\text{ReUdDD[i][j][k]}$"
+    "[comment]: <> (Fix Link Above: TODO)\n",
+    "\n",
+    "* `betaU_dD[i][j]`$=\\beta^i_{,j} = \\left(\\mathcal{V}^i \\circ \\text{ReU[i]}\\right)_{,j} = \\mathcal{V}^i_{,j} \\circ \\text{ReU[i]} + \\mathcal{V}^i \\circ \\text{ReUdD[i][j]}$\n",
+    "* `betaU_dupD[i][j]`: the same as above, except using *upwinded* finite-difference derivatives to compute $\\mathcal{V}^i_{,j}$ instead of *centered* finite-difference derivatives.\n",
+    "* `betaU_dDD[i][j][k]`$=\\beta^i_{,jk} = \\mathcal{V}^i_{,jk} \\circ \\text{ReU[i]} + \\mathcal{V}^i_{,j} \\circ \\text{ReUdD[i][k]} + \\mathcal{V}^i_{,k} \\circ \\text{ReUdD[i][j]}+\\mathcal{V}^i \\circ \\text{ReUdDD[i][j][k]}$"
    ]
   },
   {
@@ -951,7 +954,7 @@
    "source": [
     "<a id='phi_and_derivs'></a>\n",
     "\n",
-    "# Step 9: phi_and_derivs(): Standard BSSN conformal factor $\\phi$, and its derivatives $\\phi_{,i}$, $\\phi_{,ij}$, $\\bar{D}_j \\phi_i$, and $\\bar{D}_j\\bar{D}_k \\phi_i$, all written in terms of BSSN gridfunctions like $\\text{cf}$ \\[Back to [top](#toc)\\]\n",
+    "# Step 9: **`phi_and_derivs()`**: Standard BSSN conformal factor $\\phi$, and its derivatives $\\phi_{,i}$, $\\phi_{,ij}$, $\\bar{D}_j \\phi_i$, and $\\bar{D}_j\\bar{D}_k \\phi_i$, all written in terms of BSSN gridfunctions like $\\text{cf}$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{phi_and_derivs}$$"
    ]
   },
@@ -964,15 +967,15 @@
     "## Step 9.a: $\\phi$ in terms of the chosen (possibly non-standard) conformal factor variable $\\text{cf}$ (e.g., $\\text{cf}=\\chi=e^{-4\\phi}$) \\[Back to [top](#toc)\\]\n",
     "$$\\label{phi_ito_cf}$$\n",
     "\n",
-    "When solving the BSSN time evolution equations across the coordinate singularity (i.e., the \"puncture\") inside puncture black holes for example, the standard conformal factor $\\phi$ becomes very sharp, whereas $\\chi=e^{-4\\phi}$ is far smoother (see, e.g., [Campanelli, Lousto, Marronetti, and Zlochower (2006)](https://arxiv.org/abs/gr-qc/0511048) for additional discussion). Thus if we choose to rewrite derivatives of $\\phi$ in the BSSN equations in terms of finite-difference derivatives $\\text{cf}=\\chi$, numerical errors will be far smaller near the puncture.\n",
+    "When solving the BSSN time evolution equations across the coordinate singularity (i.e., the \"puncture\") inside puncture black holes for example, the standard conformal factor $\\phi$ becomes very sharp, whereas $\\chi=e^{-4\\phi}$ is far smoother (see, e.g., [Campanelli, Lousto, Marronetti, and Zlochower (2006)](https://arxiv.org/abs/gr-qc/0511048) for additional discussion). Thus if we choose to rewrite derivatives of $\\phi$ in the BSSN equations in terms of finite-difference derivatives `cf`$=\\chi$, numerical errors will be far smaller near the puncture.\n",
     "\n",
-    "The BSSN modules in NRPy+ support three options for the conformal factor variable $\\text{cf}$:\n",
+    "The BSSN modules in NRPy+ support three options for the conformal factor variable `cf`:\n",
     "\n",
-    "1. $\\text{cf}=\\phi$,\n",
-    "1. $\\text{cf}=\\chi=e^{-4\\phi}$, and\n",
-    "1. $\\text{cf}=W = e^{-2\\phi}$.\n",
+    "1. `cf`$=\\phi$,\n",
+    "1. `cf`$=\\chi=e^{-4\\phi}$, and\n",
+    "1. `cf`$=W = e^{-2\\phi}$.\n",
     "\n",
-    "The BSSN equations are written in terms of $\\phi$ (actually only $e^{-4\\phi}$ appears) and derivatives of $\\phi$, we now define $e^{-4\\phi}$ and derivatives of $\\phi$ in terms of the chosen $\\text{cf}$.\n",
+    "The BSSN equations are written in terms of $\\phi$ (actually only $e^{-4\\phi}$ appears) and derivatives of $\\phi$, we now define $e^{-4\\phi}$ and derivatives of $\\phi$ in terms of the chosen `cf`.\n",
     "\n",
     "First, we define the base variables needed within the BSSN equations:"
    ]
@@ -1001,9 +1004,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then we define $\\phi_{,i}$, $\\phi_{,ij}$, and $e^{-4\\phi}$ for each of the choices of $\\text{cf}$.\n",
+    "Then we define $\\phi_{,i}$, $\\phi_{,ij}$, and $e^{-4\\phi}$ for each of the choices of `cf`.\n",
     "\n",
-    "For $\\text{cf}=\\phi$, this is trivial:"
+    "For `cf`$=\\phi$, this is trivial:"
    ]
   },
   {
@@ -1027,7 +1030,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For $\\text{cf}=W=e^{-2\\phi}$, we have\n",
+    "For `cf`$=W=e^{-2\\phi}$, we have\n",
     "\n",
     "* $\\phi_{,i} = -\\text{cf}_{,i} / (2 \\text{cf})$\n",
     "* $\\phi_{,ij} = (-\\text{cf}_{,ij} + \\text{cf}_{,i}\\text{cf}_{,j}/\\text{cf}) / (2 \\text{cf})$\n",
@@ -1061,7 +1064,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For $\\text{cf}=W=e^{-4\\phi}$, we have\n",
+    "For `cf`$=W=e^{-4\\phi}$, we have\n",
     "\n",
     "* $\\phi_{,i} = -\\text{cf}_{,i} / (4 \\text{cf})$\n",
     "* $\\phi_{,ij} = (-\\text{cf}_{,ij} + \\text{cf}_{,i}\\text{cf}_{,j}/\\text{cf}) / (4 \\text{cf})$\n",
@@ -1139,7 +1142,7 @@
    "source": [
     "<a id='code_validation'></a>\n",
     "\n",
-    "# Step 10: Code validation against BSSN.BSSN_quantities NRPy+ module \\[Back to [top](#toc)\\]\n",
+    "# Step 10: Code validation against `BSSN.BSSN_quantities` NRPy+ module \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation}$$\n",
     "\n",
     "As a code validation check, we verify agreement in the SymPy expressions for the RHSs of the BSSN equations between\n",
@@ -1158,8 +1161,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
       "ALL TESTS PASSED!\n"
      ]
     }
@@ -1310,7 +1311,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-BSSN_quantities.ipynb to latex\n",
-      "[NbConvertApp] Writing 145875 bytes to Tutorial-BSSN_quantities.tex\n",
+      "[NbConvertApp] Writing 147286 bytes to Tutorial-BSSN_quantities.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
