--- a/Tutorial-Coutput__Parameter_Interface.ipynb
+++ b/Tutorial-Coutput__Parameter_Interface.ipynb
@@ -9,6 +9,8 @@
     "## Author: Zach Etienne\n",
     "### Formatting improvements courtesy Brandon Clark\n",
     "\n",
+    "[comment]: <> (Abstract: TODO)\n",
+    "\n",
     "### Required reading if you are unfamiliar with programming or [computer algebra systems](https://en.wikipedia.org/wiki/Computer_algebra_system). Otherwise, use for reference; you should be able to pick up the syntax as you follow the tutorial.\n",
     "+ **[Python Tutorial](https://docs.python.org/3/tutorial/index.html)**\n",
     "+ **[SymPy Tutorial](http://docs.sympy.org/latest/tutorial/intro.html)**\n",
@@ -18,6 +20,7 @@
     "* [NRPy_param_funcs.py](../edit/NRPy_param_funcs.py)\n",
     "* [SIMD.py](../edit/SIMD.py)\n",
     "\n",
+    "[comment]: <> (Introduction: TODO)\n",
     "\n"
    ]
   },
@@ -36,7 +39,7 @@
     "1. [Step 2](#sympy_ccode): Common Subexpression Elimination\n",
     "1. [Step 3](#coutput): NRPy+'s C code output routine, `Coutput()`\n",
     "1. [Step 4](#param): Oh, the features you'll see! Parameters in NRPy+\n",
-    "    1. [Step 4.a](#param_func): NRPy_param_funcs: The NRPy+ Parameter Interface\n",
+    "    1. [Step 4.a](#param_func): `NRPy_param_funcs`: The NRPy+ Parameter Interface\n",
     "1. [Step 5](#simd): Taking Advantage of SIMD (Single Instruction, Multiple Data) in NRPy+-Generated C Code\n",
     "1. [Step 6](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF"
    ]
@@ -238,9 +241,9 @@
     "\n",
     "*TL;DR: When adding new features to NRPy+ or to modules that use NRPy+, it is strongly recommended to take advantage of NRPy+'s parameter interface.*\n",
     "\n",
-    "As documented above, NRPy+'s outputC() routine accepts up to six inputs. Suppose we have a project that makes use of NRPy+ to generate *multiple C codes* for a project. It is reasonable to expect that these six inputs might vary from one C code to the next in the same project. (For example, sometimes a C code will be sufficiently simple that CSE only acts to obfuscate.) Thus we include these six inputs as part of the function call.\n",
+    "As documented above, NRPy+'s `outputC()` routine accepts up to six inputs. Suppose we have a project that makes use of NRPy+ to generate *multiple C codes* for a project. It is reasonable to expect that these six inputs might vary from one C code to the next in the same project. (For example, sometimes a C code will be sufficiently simple that CSE only acts to obfuscate.) Thus we include these six inputs as part of the function call.\n",
     "\n",
-    "Suppose we wanted to add another feature to outputC() that is universal to our project. If outputC()'s behavior were only steerable with inputs into the function call, then the number of inputs will balloon with the number of features, making the entire NRPy+ codebase far less manageable. To address this problem, while at the same time making the modules and functions within NRPy+ more easily extensible, we have introduced a parameter interface."
+    "Suppose we wanted to add another feature to `outputC()` that is universal to our project. If `outputC()`'s behavior were only steerable with inputs into the function call, then the number of inputs will balloon with the number of features, making the entire NRPy+ codebase far less manageable. To address this problem, while at the same time making the modules and functions within NRPy+ more easily extensible, we have introduced a parameter interface."
    ]
   },
   {
@@ -252,9 +255,9 @@
     "## Step 4.a: NRPy_param_funcs: The NRPy+ Parameter Interface\n",
     "$$\\label{param_func}$$\n",
     "\n",
-    "The **NRPy_param_funcs** module manages the parameter interface in NRPy+, and parameter information is stored in two global data structures defined within this module:\n",
+    "The **`NRPy_param_funcs`** module manages the parameter interface in NRPy+, and parameter information is stored in two global data structures defined within this module:\n",
     "\n",
-    "* glb_params_list\\[\\]: The list of registered parameters. Each item in the list is a [named tuple](https://docs.python.org/2/library/collections.html#collections.namedtuple) of the type \"glb_param\", where the type is defined\n",
+    "* glb_params_list\\[\\]: The list of registered parameters. Each item in the list is a [named tuple](https://docs.python.org/2/library/collections.html#collections.namedtuple) of the type `glb_param`, where the type is defined\n",
     "    * glb_param(\\[parameter type\\],\\[module name\\],\\[parameter name\\],\\[default value\\])\n",
     "* glb_paramsvals_list\\[\\]: The list of parameter values. When a new glb_param is appended to the glb_params_list\\[\\], the corresponding element in glb_paramsvals_list\\[\\] is set to the default value. This value can be overwritten with\n",
     "    * parameter files or parameter file overrides *when running NRPy+ in command-line mode*, as follows:\n",
@@ -279,7 +282,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At any time, you can find the parameter's value via the par.parval_from_str() function, which accepts a string in one of two formats: \"variablename\" or \"modulename::variablename\". *Warning*: If more than one module sets the parameter with variable name \"n\", par.parval_from_str(\"n\") will produce an error."
+    "At any time, you can find the parameter's value via the `par.parval_from_str()` function, which accepts a string in one of two formats: \"`variablename`\" or \"`modulename::variablename`\". *Warning*: If more than one module sets the parameter with variable name `\"n\"`, `par.parval_from_str(\"n\")` will produce an error."
    ]
   },
   {
@@ -305,7 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, let's overwrite the default parameter value of \"mymodule::n\" to be 4 instead:"
+    "Next, let's overwrite the default parameter value of `\"mymodule::n\"` to be 4 instead:"
    ]
   },
   {
@@ -332,7 +335,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Warning**: Setting NRPy+ parameters via direct calls to par.set_paramsvals_value(\"modulename::variablename\"), when in non-interactive mode (e.g., running in a Jupyter or iPython notebook) is *strongly* discouraged, and in the future may result in an error message."
+    "**Warning**: Setting NRPy+ parameters via direct calls to `par.set_paramsvals_value(\"modulename::variablename\")`, when in non-interactive mode (e.g., running in a Jupyter or iPython notebook) is *strongly* discouraged, and in the future may result in an error message."
    ]
   },
   {
@@ -352,7 +355,7 @@
     "\n",
     "As SIMD instrinsics can differ from one CPU to another, and even between compilers, NRPy+ outputs generic C macros for common arithmetic operations and transcendental functions. In this way, the C code's Makefile can decide the most optimal SIMD intrinsics for the given CPU's instruction set and compiler. For example, most modern CPUs support [AVX](https://en.wikipedia.org/wiki/Advanced_Vector_Extensions), and a majority support up to [AVX2](https://en.wikipedia.org/wiki/Advanced_Vector_Extensions#Advanced_Vector_Extensions_2), while some support up to [AVX512](https://en.wikipedia.org/wiki/AVX-512) instruction sets. For a full list of compiler intrinsics, see the [official Intel SIMD intrinsics documentation](https://software.intel.com/sites/landingpage/IntrinsicsGuide/).\n",
     "\n",
-    "To see how this works, let's return to our NRPy+ outputC() CSE example above, but this time enabling SIMD intrinsics:"
+    "To see how this works, let's return to our NRPy+ `outputC()` CSE example above, but this time enabling SIMD intrinsics:"
    ]
   },
   {
@@ -396,14 +399,14 @@
    "metadata": {},
    "source": [
     "The above SIMD code does the following.\n",
-    "* First it fills a constant SIMD array of type REAL_SIMD_ARRAY with the integer 2 to the double-precision 2.0. The larger C code in which the above-generated code will be embedded should automatically #define REAL_SIMD_ARRAY to e.g., _m256d or _m512d for AVX or AVX512, respectively. In other words, AVX intrinsics will need to set 4 double-precision variables in REAL_SIMD_ARRAY to 2.0, and AVX-512 intrinsics will need to set 8.\n",
+    "* First it fills a constant SIMD array of type `REAL_SIMD_ARRAY `with the integer 2 to the double-precision 2.0. The larger C code in which the above-generated code will be embedded should automatically `#define REAL_SIMD_ARRAY` to e.g., _m256d or _m512d for AVX or AVX512, respectively. In other words, AVX intrinsics will need to set 4 double-precision variables in `REAL_SIMD_ARRAY` to 2.0, and AVX-512 intrinsics will need to set 8.\n",
     "* Then it changes all arithmetic operations to be in the form of SIMD \"functions\", which are in fact #define'd in the larger C code as compiler intrinsics. \n",
     "\n",
-    "FusedMulAddSIMD(a,b,c) performs a fused-multiply-add operation (i.e., FusedMulAddSIMD(a,b,c)=$a*b+c$), which can be performed on many CPUs nowadays (with FMA or AVX-512 instruction support) with a *single clock cycle*, at nearly the same expense as a single addition or multiplication, \n",
+    "FusedMulAddSIMD(a,b,c) performs a fused-multiply-add operation (i.e., `FusedMulAddSIMD(a,b,c)`=$a*b+c$), which can be performed on many CPUs nowadays (with FMA or AVX-512 instruction support) with a *single clock cycle*, at nearly the same expense as a single addition or multiplication, \n",
     "\n",
     "Note that it is assumed that the SIMD code exists within a suitable set of nested loops, in which the innermost loop increments every 4 in the case of AVX double precision or 8 in the case of AVX-512 double precision.\n",
     "\n",
-    "As an additional note, NRPy+'s SIMD routines are aware that the C $\\texttt{pow(x,y)}$ function is exceedingly expensive when $|\\texttt{y}|$ is a small integer. It will automatically convert such expressions into either multiplications of x or one-over multiplications of x, as follows (notice there are no calls to PowSIMD() intrinsics!):"
+    "As an additional note, NRPy+'s SIMD routines are aware that the C `pow(x,y)` function is exceedingly expensive when $|\\texttt{y}|$ is a small integer. It will automatically convert such expressions into either multiplications of x or one-over multiplications of x, as follows (notice there are no calls to `PowSIMD()` intrinsics!):"
    ]
   },
   {
@@ -462,7 +465,8 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-Coutput__Parameter_Interface.ipynb to latex\n",
-      "[NbConvertApp] Writing 41768 bytes to Tutorial-Coutput__Parameter_Interface.tex\n",
+      "[pandoc warning] Duplicate link reference `[comment]' \"source\" (line 17, column 1)\n",
+      "[NbConvertApp] Writing 47794 bytes to Tutorial-Coutput__Parameter_Interface.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -486,21 +490,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
