--- a/Tutorial-ETK_thorn-GiRaFFE_Higher_Order_v2.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFE_Higher_Order_v2.ipynb
@@ -9,11 +9,16 @@
     "## Authors: Zach Etienne & Patrick Nelson\n",
     "### Formatting improvements courtesy Brandon Clark\n",
     "\n",
+    "## GiRaFFE_HO_v2 is an experiment that omits the analytic derivatives of $\\partial_j T^j_{{\\rm EM} i}$. \n",
+    "\n",
+    "### Note that, for full compatibility with .par files, running this notebook will <font color = 'red'>overwrite</font> the thorn GiraFFE_HO\n",
+    "\n",
+    "[comment]: <> (Module Status and Validation Notes: TODO)\n",
+    "\n",
+    "\n",
     "### NRPy+ Source Code for this module: [GiRaFFE_HO/GiRaFFE_Higher_Order_v2.py](../edit/GiRaFFE_HO/GiRaFFE_Higher_Order_v2.py) [\\[tutorial\\]](Tutorial-GiRaFFE_Higher_Order_v2.ipynb)  Constructs GRFFE evolution equations and initial data as SymPy expressions.\n",
     "\n",
-    "<font color='red'>**GiRaFFE_HO_v2 is an experiment that omits the analytic derivatives of $\\partial_j T^j_{{\\rm EM} i}$.**</font>\n",
     "\n",
-    "<font color='red'>**Note that, for full compatibility with .par files, running this notebook will *overwrite* the thorn GiraFFE_HO**</font>\n",
     "\n",
     "## Introduction:\n",
     "\n",
@@ -39,21 +44,21 @@
     "This module is organized as follows\n",
     "\n",
     "1. [Step 1](#initializenrpy): Call on NRPy+ to convert the SymPy expression for the evolution equations and A-to-B into one C-code kernel for each\n",
-    "    1. [Step 1.a](#import): Import NRPy+ core modules and the GiRaFFE_Higher_Order_v2 module\n",
+    "    1. [Step 1.a](#import): Import NRPy+ core modules and the `GiRaFFE_Higher_Order_v2` module\n",
     "    1. [Step 1.b](#ccode_output): Create the C code output kernel \n",
     "    1. [Step 1.c](#ccode_write): Write C code to files\n",
     "    1. [Step 1.d](#a2bdriver): The A-to-B driver\n",
     "1. [Step 2](#etk): Interfacing with the Einstein Toolkit\n",
     "    1. [Step 2.a](#einstein_c): Constructing the Einstein Toolkit C-code calling functions that include the C code kernels\n",
     "    1. [Step 2.b](#conservative2primitive): The Conservative to Primitive Solver\n",
-    "        1. [Step 2.b.i](#old_giraffe): Including \"GiRaFFE_headers.h\" from old version of Giraffe\n",
-    "        1. [Step 2.b.ii](#compute_conservatives): Writing compute_conservatives_FFE.C\n",
+    "        1. [Step 2.b.i](#old_giraffe): Including `GiRaFFE_headers.h` from old version of GiRaFFE\n",
+    "        1. [Step 2.b.ii](#compute_conservatives): Writing `compute_conservatives_FFE.C`\n",
     "    1. [Step 2.c](#grmhd): GRMHD variables provided by HydroBase\n",
     "    1. [Step 2.d](#timelevel): Copying initial data to additional timelevels\n",
     "    1. [Step 2.e](#cclfiles): CCL files - Define how this module interacts and interfaces with the larger Einstein Toolkit infrastructure\n",
-    "        1. [Step2.e.i](#interface): interface.ccl\n",
-    "        1. [Step2.e.ii](#param): param.ccl\n",
-    "        1. [Step2.e.iiii](#schedule): schedule.ccl\n",
+    "        1. [Step2.e.i](#interface): `interface.ccl`\n",
+    "        1. [Step2.e.ii](#param): `param.ccl`\n",
+    "        1. [Step2.e.iiii](#schedule): `schedule.ccl`\n",
     "    1. [Step 2.f](#einstein_list): Add the C code to the Einstein Toolkit compilation list\n",
     "1. [Step 3](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF"
    ]
@@ -76,11 +81,10 @@
    "source": [
     "<a id='import'></a>\n",
     "\n",
-    "## Step 1.a: Import NRPy+ core modules and the GiRaFFE_Higher_Order_v2 module \\[Back to [top](#toc)\\]\n",
+    "## Step 1.a: Import NRPy+ core modules and the `GiRaFFE_Higher_Order_v2` module \\[Back to [top](#toc)\\]\n",
     "$$\\label{import}$$\n",
     "\n",
-    "We start by importing the core NRPy+ modules we need and setting commonly used parameters. Since we are writing an ETK thorn, we'll need to set \"grid::GridFuncMemAccess\" to \"ETK\". We will then import the GiRaFFE_Higher_Order.py module we previously created and run its main function to generate the SymPy for the expressions we want.\n",
-    "$$\\label{step1p1}$$"
+    "We start by importing the core NRPy+ modules we need and setting commonly used parameters. Since we are writing an ETK thorn, we'll need to set `\"grid::GridFuncMemAccess\"` to `\"ETK\"`. We will then import the [GiRaFFE_Higher_Order.py](../edit/GiRaFFE_HO/GiRaFFE_Higher_Order.py) module we previously created and run its main function to generate the SymPy for the expressions we want."
    ]
   },
   {
@@ -119,7 +123,7 @@
     "## Step 1.b: Create the C code output kernel \\[Back to [top](#toc)\\]\n",
     "$$\\label{ccode_output}$$\n",
     "\n",
-    "To do this, for each .h file we need, we will set up an array of lhrh objects representing the gridfunctions to print. We will then pass that array to FD_outputC to get a string of optimized C code. Next, we use the loop function to add code to the kernel so that is applied to the whole ETK grid.\n"
+    "To do this, for each header file we need, we will set up an array of `lhrh` objects representing the gridfunctions to print. We will then pass that array to `FD_outputC()` to get a string of optimized C code. Next, we use the loop function to add code to the kernel so that is applied to the whole ETK grid.\n"
    ]
   },
   {
@@ -208,7 +212,7 @@
     "## Step 1.c: Write C code to files \\[Back to [top](#toc)\\]\n",
     "$$\\label{ccode_write}$$\n",
     "\n",
-    "Here, we write our C code to files after first creating appropriate directories. Note that we also import u0_smallb_Poynting__Cartesian.py for its computeu0_Cfunction."
+    "Here, we write our C code to files after first creating appropriate directories. Note that we also import [u0_smallb_Poynting__Cartesian.py](../edit/u0_smallb_Poynting__Cartesian/u0_smallb_Poynting__Cartesian.py) for its `computeu0_Cfunction`."
    ]
   },
   {
@@ -248,7 +252,7 @@
     "## Steps 1.d: The A-to-B driver \\[Back to [top](#toc)\\]\n",
     "$$\\label{a2bdriver}$$\n",
     "\n",
-    "We will also need a routine to compute new Valencia 3-velocities at each timestep using a conservative-to-primitive solver. Since we need $v^i_{(n)}$ everywhere, this will require us to compute $B^i$ everywhere. However, $B^i = \\epsilon^{ijk} \\partial_j A_k$ requires derivatives of $A_i$, so getting $B^i$ will require some finesse. A chief aspect of this will require using lower-order finite differencing in the ghost zones. To that end, we will create .h files for each finite differencing order $\\leq 10$, as well as upwinded- and downwinded-derivatives at 2nd order. These will let us compute the derivative at the outermost gridpoints."
+    "We will also need a routine to compute new Valencia 3-velocities at each timestep using a conservative-to-primitive solver. Since we need $v^i_{(n)}$ everywhere, this will require us to compute $B^i$ everywhere. However, $B^i = \\epsilon^{ijk} \\partial_j A_k$ requires derivatives of $A_i$, so getting $B^i$ will require some finesse. A chief aspect of this will require using lower-order finite differencing in the ghost zones. To that end, we will create header files for each finite differencing order $\\leq 10$, as well as upwinded- and downwinded-derivatives at 2nd order. These will let us compute the derivative at the outermost gridpoints."
    ]
   },
   {
@@ -406,11 +410,11 @@
     "## Step 2.a: Constructing the Einstein Toolkit C-code calling functions that include the C code kernels. \\[Back to [top](#toc)\\]\n",
     "$$\\label{einstein_c}$$\n",
     "\n",
-    "Now that we have generated the C code kernel *GiRaFFE_RHSs.h* and the parameters file *NRPy_params.h*, we will need to write C code to make use of these files. To do this, we can simply follow the example within the [IDScalarWaveNRPy tutorial module](Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb). Functions defined by these files will be called by the Einstein Toolkit scheduler (specified in schedule.ccl below).\n",
+    "Now that we have generated the C code kernel `GiRaFFE_RHSs.h` and the parameters file `NRPy_params.h`, we will need to write C code to make use of these files. To do this, we can simply follow the example within the [IDScalarWaveNRPy tutorial module](Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb). Functions defined by these files will be called by the Einstein Toolkit scheduler (specified in `schedule.ccl` below).\n",
     "\n",
     "Also, we will write the logic that determines which files are called where in order to calculate $B^i$ here. \n",
     "\n",
-    "1. Take the primary finite differencing order $N$ from the param.ccl file. Fill in the interior points with the corresponding FD order. \n",
+    "1. Take the primary finite differencing order $N$ from the `param.ccl` file. Fill in the interior points with the corresponding FD order. \n",
     "1. Then, for each face, at $0+{\\rm cctk\\_nghostzones[face]}-1$ and ${\\rm cctk\\_lsh[face]}-{\\rm cctk\\_nghostzones[face]}+1$, calculate $B^i$ at order $N-2$\n",
     "1. Continue moving outwards: at the points $0+{\\rm cctk\\_nghostzones[face]}-p$ and ${\\rm cctk\\_lsh[face]}-{\\rm cctk\\_nghostzones[face]}+p$, calculate B at order $N-2p$.\n",
     "1. When ${\\rm cctk\\_nghostzones[face]}-p = 0$, use the upwinding and downwinding derivatives for the appropriate face."
@@ -1196,10 +1200,10 @@
    "source": [
     "<a id='old_giraffe'></a>\n",
     "\n",
-    "### Step 2.b.i: Including \"GiRaFFE_headers.h\" from old version of Giraffe \\[Back to [top](#toc)\\]\n",
+    "### Step 2.b.i: Including `GiRaFFE_headers.h` from old version of GiRaFFE \\[Back to [top](#toc)\\]\n",
     "$$\\label{old_giraffe}$$\n",
     "\n",
-    "We will also include GiRaFFE_headers.h from the old version of GiRaFFE, which defines constants on which our conservative-to-primitive solver depends."
+    "We will also include `GiRaFFE_headers.h` from the old version of GiRaFFE, which defines constants on which our conservative-to-primitive solver depends."
    ]
   },
   {
@@ -1302,10 +1306,10 @@
    "source": [
     "<a id='compute_conservatives'></a>\n",
     "\n",
-    "### Step 2.b.ii: Writing compute_conservatives_FFE.C \\[Back to [top](#toc)\\]\n",
+    "### Step 2.b.ii: Writing `compute_conservatives_FFE.C` \\[Back to [top](#toc)\\]\n",
     "$$\\label{compute_conservatives}$$\n",
     "\n",
-    "The conservative to primitive solver will also depend on the function provided by compute_conservatives_FFE.C."
+    "The conservative to primitive solver will also depend on the function provided by `compute_conservatives_FFE.C`."
    ]
   },
   {
@@ -1584,10 +1588,10 @@
    "source": [
     "<a id='interface'></a>\n",
     "\n",
-    "### Step 2.e.i: interface.ccl \\[Back to [top](#toc)\\]\n",
+    "### Step 2.e.i: `interface.ccl` \\[Back to [top](#toc)\\]\n",
     "$$\\label{interface}$$\n",
     "\n",
-    "1. $\\text{interface.ccl}$: defines the gridfunction groups needed, and provides keywords denoting what this thorn provides and what it should inherit from other thorns. This file governs the interaction between this thorn and others; more information can be found in the [official Einstein Toolkit documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-260000C2.2). \n",
+    "1. `interface.ccl`: defines the gridfunction groups needed, and provides keywords denoting what this thorn provides and what it should inherit from other thorns. This file governs the interaction between this thorn and others; more information can be found in the [official Einstein Toolkit documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-260000C2.2). \n",
     "With \"implements\", we give our thorn its unique name. By \"inheriting\" other thorns, we tell the Toolkit that we will rely on variables and functions that exist and are declared \"public\" within those thorns. Then, we tell the toolkit that we want the gridfunctions $A_i$, $\\tilde{S}_i$, and $\\sqrt{\\gamma}\\Phi$ to be visible to other thorns by using the keyword \"public\". "
    ]
   },
@@ -1685,10 +1689,10 @@
    "source": [
     "<a id='param'></a>\n",
     "\n",
-    "### Step 2.e.ii: param.ccl \\[Back to [top](#toc)\\]\n",
+    "### Step 2.e.ii: `param.ccl` \\[Back to [top](#toc)\\]\n",
     "$$\\label{param}$$\n",
     "\n",
-    "2. $\\text{param.ccl}$: specifies free parameters within the thorn, enabling them to be set at runtime. It is required to provide allowed ranges and default values for each parameter. More information on this file's syntax can be found in the [official Einstein Toolkit documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-265000C2.3). A number of parameters are defined, and more parameters can be easily added in later versions. We also set the number of timelevels we will store in memory."
+    "2. `param.ccl`: specifies free parameters within the thorn, enabling them to be set at runtime. It is required to provide allowed ranges and default values for each parameter. More information on this file's syntax can be found in the [official Einstein Toolkit documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-265000C2.3). A number of parameters are defined, and more parameters can be easily added in later versions. We also set the number of timelevels we will store in memory."
    ]
   },
   {
@@ -1771,10 +1775,10 @@
    "source": [
     "<a id='schedule'></a>\n",
     "\n",
-    "### Step 2.e.iii: schedule.ccl \\[Back to [top](#toc)\\]\n",
+    "### Step 2.e.iii: `schedule.ccl` \\[Back to [top](#toc)\\]\n",
     "$$\\label{schedule}$$\n",
     "\n",
-    "3. $\\text{schedule.ccl}$: allocates storage for gridfunctions, defines how the thorn's functions should be scheduled in a broader simulation, and specifies the regions of memory written to or read from gridfunctions. $\\text{schedule.ccl}$'s official documentation may be found [here](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-268000C2.4). \n",
+    "3. `schedule.ccl`: allocates storage for gridfunctions, defines how the thorn's functions should be scheduled in a broader simulation, and specifies the regions of memory written to or read from gridfunctions. `schedule.ccl`'s official documentation may be found [here](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-268000C2.4). \n",
     "\n",
     "For clarity, we will outline the desired schedule we wish to create in the toolkit:\n",
     "\n",
@@ -2206,7 +2210,7 @@
     "\n",
     "## Step 2.f: Add the C file to Einstein Toolkit compilation list \\[Back to [top](#toc)\\]\n",
     "\n",
-    "We will also need $\\text{make.code.defn}$, which indicates the list of files that need to be compiled. \n",
+    "We will also need `make.code.defn`, which indicates the list of files that need to be compiled. \n",
     "$$\\label{einstein_list}$$"
    ]
   },
