--- a/Tutorial-GiRaFFE_Higher_Order_v2.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order_v2.ipynb
@@ -9,9 +9,13 @@
     "## Authors: Patrick Nelson, Zachariah Etienne, George Vopal & Maria Babiuc-Hamilton\n",
     "### Formatting improvements courtesy Brandon Clark\n",
     "\n",
-    "<font color='red'>**This module is under active development -- do *not* use the resulting C code output for doing science.**</font>\n",
+    "## GiRaFFE_HO_v2 is an experiment that omits the analytic derivatives of $\\partial_j T^j_{{\\rm EM} i}$\n",
     "\n",
-    "<font color='red'>**GiRaFFE_HO_v2 is an experiment that omits the analytic derivatives of $\\partial_j T^j_{{\\rm EM} i}$**</font>\n",
+    "\n",
+    "**Module Status:** <font color='red'><b> In progress </b></font>\n",
+    "\n",
+    "**Validation Notes:** This module is under active development -- do ***not*** use the resulting C code output for doing science.\n",
+    "\n",
     "\n",
     "### NRPy+ Source Code for this module: [GiRaFFE_HO/GiRaFFE_Higher_Order_v2.py](../edit/GiRaFFE_HO/GiRaFFE_Higher_Order_v2.py)\n",
     "\n",
@@ -22,9 +26,9 @@
     "\n",
     "The GRFFE evolution equations (from eq. 13 of the [original paper](https://arxiv.org/pdf/1704.00599.pdf)) we wish to encode in the NRPy+ version of $\\texttt{GiRaFFE}$ are as follows:\n",
     "\n",
-    "* $\\partial_t \\tilde{S}_i = - \\partial_j \\left( \\alpha \\sqrt{\\gamma} T^j_{{\\rm EM} i} \\right) + \\frac{1}{2} \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu}$: [Link to Step 3.0](#construct_si)\n",
-    "* $\\partial_t A_i = \\epsilon_{ijk} v^j B^k - \\partial_i (\\alpha \\Phi - \\beta^j A_j)$: [Link to Step 4.0](#construct_ai)\n",
-    "* $\\partial_t [\\sqrt{\\gamma} \\Phi] = -\\partial_j (\\alpha\\sqrt{\\gamma}A^j - \\beta^j [\\sqrt{\\gamma} \\Phi]) - \\xi \\alpha [\\sqrt{\\gamma} \\Phi]$: [Link to Step 4.0](#construct_ai)\n",
+    "* $\\partial_t \\tilde{S}_i = - \\partial_j \\left( \\alpha \\sqrt{\\gamma} T^j_{{\\rm EM} i} \\right) + \\frac{1}{2} \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu}$: [Link to Step 3.0](#step7)\n",
+    "* $\\partial_t A_i = \\epsilon_{ijk} v^j B^k - \\partial_i (\\alpha \\Phi - \\beta^j A_j)$: [Link to Step 4.0](#step8)\n",
+    "* $\\partial_t [\\sqrt{\\gamma} \\Phi] = -\\partial_j (\\alpha\\sqrt{\\gamma}A^j - \\beta^j [\\sqrt{\\gamma} \\Phi]) - \\xi \\alpha [\\sqrt{\\gamma} \\Phi]$: [Link to Step 4.0](#step8)\n",
     "\n",
     "Here, the densitized spatial Poynting flux one-form $\\tilde{S}_i = \\sqrt{\\gamma} S_i$ (and $S_i$ comes from $S_{\\mu} -n_{\\nu} T^{\\nu}_{{\\rm EM} \\mu}$), and $(\\Phi, A_i)$ is the vector potential. We will solve these PDEs using the method of lines, where the right-hand sides of these equations (involving no explicit time derivatives) will be constructed using NRPy+.\n",
     "\n",
@@ -35,31 +39,7 @@
     "* Greek indices refer to four-dimensional quantities where the zeroth component indicates temporal (time) component.\n",
     "* Latin indices refer to three-dimensional quantities. This is somewhat counterintuitive since Python always indexes its lists starting from 0. As a result, the zeroth component of three-dimensional quantities will necessarily indicate the first *spatial* direction.\n",
     "\n",
-    "For instance, in calculating the first term of [$T_{\\rm EM}^{\\mu\\nu}$](#em_tensor) (specifically, ${\\rm Term\\ 1} = b^2 u^\\mu u^\\nu$), we use Greek indices:\n",
-    "```\n",
-    "T4EMUU = ixp.zerorank2(DIM=4)\n",
-    "for mu in range(4):\n",
-    "    for nu in range(4):\n",
-    "        # Term 1: b^2 u^{\\mu} u^{\\nu}\n",
-    "        T4EMUU[mu][nu] = smallb2*u4U[mu]*u4U[nu]\n",
-    "```\n",
-    "\n",
-    "When we calculate [$\\beta_i = \\gamma_{ij} \\beta^j$](#4metric), we use Latin indices:\n",
-    "```\n",
-    "betaD = ixp.zerorank1()\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        betaD[i] += gammaDD[i][j] * betaU[j]\n",
-    "```\n",
-    "\n",
-    "As a corollary, any expressions involving mixed Greek and Latin indices will need to offset one set of indices by one: A Latin index in a four-vector will be incremented and a Greek index in a three-vector will be decremented (however, the latter case does not occur in this tutorial module). This can be seen when we handle the second term of [$\\partial_t \\tilde{S}_i$](#construct_si) (or, more specifically, the second term thereof: $\\frac{1}{2} \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu}$):\n",
-    "```\n",
-    "# The second term: \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu} / 2\n",
-    "for i in range(DIM):\n",
-    "    for mu in range(4):\n",
-    "        for nu in range(4):\n",
-    "            Stilde_rhsD[i] += alpsqrtgam * T4EMUU[mu][nu] * g4DDdD[mu][nu][i+1] / 2\n",
-    "```"
+    "As a corollary, any expressions involving mixed Greek and Latin indices will need to offset one set of indices by one: A Latin index in a four-vector will be incremented and a Greek index in a three-vector will be decremented (however, the latter case does not occur in this tutorial module)."
    ]
   },
   {
@@ -82,7 +62,7 @@
     "1. [Step 5](#construct_ai): Construct the evolution equations for $A_i$ and $[\\sqrt{\\gamma}\\Phi]$\n",
     "    1. [Step 5.a](#aux): Construct some useful auxiliary gridfunctions for the other evolution equations\n",
     "    1. [Step 5.b](#complete_construct_ai): Complete the construction of the evolution equations for $A_i$ and $[\\sqrt{\\gamma}\\Phi]$\n",
-    "1. [Step 6](#code_validation): Code Validation against GiRaFFE_HO.GiRaFFE_Higher_Order_v2 NRPy+ Module\n",
+    "1. [Step 6](#code_validation): Code Validation against `GiRaFFE_HO.GiRaFFE_Higher_Order_v2` NRPy+ Module\n",
     "1. [Step 7](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF file"
    ]
   },
@@ -327,12 +307,12 @@
     "## Step 3.a: $u^i$ and $b^i$ and related quantities \\[Back to [top](#toc)\\]\n",
     "$$\\label{uibi}$$\n",
     "\n",
-    "We begin by importing what we can from u0_smallb_Poynting__Cartesian.py. We will need the four-velocity $u^\\mu$, which is related to the Valencia 3-velocity $v^i_{(n)}$ used directly by $\\texttt{GiRaFFE}$ (see also [Duez, et al, eqs. 53 and 56](https://arxiv.org/pdf/astro-ph/0503420.pdf))\n",
+    "We begin by importing what we can from [u0_smallb_Poynting__Cartesian.py](../edit/u0_smallb_Poynting__Cartesian/u0_smallb_Poynting__Cartesian.py). We will need the four-velocity $u^\\mu$, which is related to the Valencia 3-velocity $v^i_{(n)}$ used directly by $\\texttt{GiRaFFE}$ (see also [Duez, et al, eqs. 53 and 56](https://arxiv.org/pdf/astro-ph/0503420.pdf))\n",
     "\\begin{align}\n",
     "u^i &= u^0 (\\alpha v^i_{(n)} - \\beta^i), \\\\\n",
     "u_j &= \\alpha u^0 \\gamma_{ij} v^i_{(n)},\n",
     "\\end{align}\n",
-    "where $v^i_{(n)}$ is the Valencia three-velocity. These have already been constructed in terms of the Valencia 3-velocity and other 3+1 ADM quantities by the u0_smallb_Poynting__Cartesian.py module, so we can simply import these variables:\n"
+    "where $v^i_{(n)}$ is the Valencia three-velocity. These have already been constructed in terms of the Valencia 3-velocity and other 3+1 ADM quantities by the [u0_smallb_Poynting__Cartesian.py](../edit/u0_smallb_Poynting__Cartesian/u0_smallb_Poynting__Cartesian.py) module, so we can simply import these variables:\n"
    ]
   },
   {
@@ -361,7 +341,7 @@
     "b^0 &= \\frac{1}{\\sqrt{4\\pi}} B^0_{\\rm (u)} = \\frac{u_j B^j}{\\sqrt{4\\pi}\\alpha}, \\\\\n",
     "b^i &= \\frac{1}{\\sqrt{4\\pi}} B^i_{\\rm (u)} = \\frac{B^i + (u_j B^j) u^i}{\\sqrt{4\\pi}\\alpha u^0}, \\\\\n",
     "\\end{align}\n",
-    "where $B^i$ is the variable tracked by the HydroBase thorn in the Einstein Toolkit. Again, these have already been built by the u0_smallb_Poynting__Cartesian.py module, so we can simply import the variables."
+    "where $B^i$ is the variable tracked by the HydroBase thorn in the Einstein Toolkit. Again, these have already been built by the [u0_smallb_Poynting__Cartesian.py](../edit/u0_smallb_Poynting__Cartesian/u0_smallb_Poynting__Cartesian.py), so we can simply import the variables."
    ]
   },
   {
@@ -441,7 +421,7 @@
     "\\partial_t \\tilde{S}_i &= - \\partial_j \\underbrace{\\left( \\alpha \\sqrt{\\gamma} T^j_{{\\rm EM} i} \\right)}_{\\rm SevolParenUD} + \\frac{1}{2} \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu} \\\\\n",
     "                       &= - \\partial_j{\\rm SevolParenUD[i][j]} + \\frac{1}{2} \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu} .\n",
     "\\end{align}\n",
-    "We will first take construct ${\\rm SevolParenUD}$, then use its derivatives to construct the evolution equation. Note that \n",
+    "We will first take construct `SevolParenUD`, then use its derivatives to construct the evolution equation. Note that \n",
     "\\begin{align}\n",
     "{\\rm SevolParenUD[i][j]} &= \\alpha \\sqrt{\\gamma} T^j_{{\\rm EM} i} \\\\\n",
     "                             &= \\alpha \\sqrt{\\gamma} g_{\\mu i} T^{\\mu j}_{\\rm EM}.\n",
@@ -475,8 +455,7 @@
     "Stilde_rhsD = ixp.zerorank1()\n",
     "# The first term: \\alpha \\sqrt{\\gamma} \\partial_j T^j_{{\\rm EM} i}\n",
     "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        Stilde_rhsD[i] += -SevolParenUD_dD[j][i][j]\n",
+    "    Stilde_rhsD[i] += -SevolParenUD_dD[i][j][j]\n",
     "\n",
     "# The second term: \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu} / 2\n",
     "for i in range(DIM):\n",
@@ -605,7 +584,7 @@
    "source": [
     "<a id='code_validation'></a>\n",
     "\n",
-    "# Step 6:  Code Validation against GiRaFFE_HO.GiRaFFE_Higher_Order_v2 NRPy+ Module \\[Back to [top](#toc)\\]\n",
+    "# Step 6:  Code Validation against `GiRaFFE_HO.GiRaFFE_Higher_Order_v2` NRPy+ Module \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation}$$\n",
     "\n",
     "\n",
@@ -705,7 +684,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-GiRaFFE_Higher_Order_v2.ipynb to latex\n",
-      "[NbConvertApp] Writing 73551 bytes to Tutorial-GiRaFFE_Higher_Order_v2.tex\n",
+      "[NbConvertApp] Writing 76747 bytes to Tutorial-GiRaFFE_Higher_Order_v2.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -729,21 +708,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
