--- a/Tutorial-GiRaFFEfood_HO.ipynb
+++ b/Tutorial-GiRaFFEfood_HO.ipynb
@@ -9,7 +9,13 @@
     "## Author: Zach Etienne & Patrick Nelson\n",
     "### Formatting improvements courtesy Brandon Clark\n",
     "\n",
+    "[comment]: <> (Abstract: TODO)\n",
+    "\n",
     "### NRPy+ Source Code for this module: [GiRaFFEfood_HO/GiRaFFEfood_HO.py](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO.py)\n",
+    "\n",
+    "**Module Status:** <font color='orange'><b> Self-Validated </b></font>\n",
+    "\n",
+    "**Validation Notes:** This tutorial module has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation1). **Additional validation tests may have been performed, but are as yet, undocumented. (TODO)**\n",
     "\n",
     "## Introduction: \n",
     "With the $\\texttt{GiRaFFE}$ evolution thorn constructed, we now need to \"feed\" our giraffe with initial data to evolve. While there are several different choices of initial data we can use here, for the moment, we will only be implementing the \"Exact Wald\" initial data, given by Table 3 in [the original paper](https://arxiv.org/pdf/1704.00599.pdf):\n",
@@ -40,9 +46,9 @@
     "1. [Step 2](#set_aphi_ephi): Set the vectors $A_{\\phi}$ and $E_{\\phi}$ in Spherical coordinates \n",
     "1. [Step 3](#jacobian): Use the Jacobian matrix to transform the vectors to Cartesian coordinates\n",
     "1. [Step 4](#vi): Calculate $v^i$ from $A_i$ and $E_i$\n",
-    "    1. [Step 4.a](#code_validation1): Code Validation against GiRaFFEfood_HO/GiRaFFEfood_HO NRPy+ Module\n",
+    "    1. [Step 4.a](#code_validation1): Code Validation against `GiRaFFEfood_HO.GiRaFFEfood_HO` NRPy+ Module\n",
     "1. [Step 5](#si): Build the expression for $\\tilde{S}_i$\n",
-    "    1. [Step 5.a](#code_validation2): Code Validation against GiRaFFEfood_HO/GiRaFFEfood_HO NRPy+ Module\n",
+    "    1. [Step 5.a](#code_validation2): Code Validation against `GiRaFFEfood_HO.GiRaFFEfood_HO` NRPy+ Module\n",
     "1. [Step 6](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF file"
    ]
   },
@@ -190,7 +196,7 @@
     "# Step 4: Calculate $v^i$ from $A_i$ and $E_i$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{vi}$$\n",
     "\n",
-    "We will now find the magnetic field using equation 18 in [the original paper](https://arxiv.org/pdf/1704.00599.pdf) $$B^i = \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_j A_k. $$ We will need the metric quantites: the lapse $\\alpha$, the shift $\\beta^i$, and the three-metric $\\gamma_{ij}$. We will also need the Levi-Civita symbol, provided by $\\text{WeylScal4NRPy}$. \n",
+    "We will now find the magnetic field using equation 18 in [the original paper](https://arxiv.org/pdf/1704.00599.pdf) $$B^i = \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_j A_k. $$ We will need the metric quantites: the lapse $\\alpha$, the shift $\\beta^i$, and the three-metric $\\gamma_{ij}$. We will also need the Levi-Civita symbol, provided by `WeylScal4NRPy.WeylScalars_Cartesian`. \n",
     "\n"
    ]
   },
@@ -266,12 +272,12 @@
    "source": [
     "<a id='code_validation1'></a>\n",
     "\n",
-    "## Step 4.a: Code Validation against GiRaFFEfood_HO/GiRaFFEfood_HO NRPy+ module  \\[Back to [top](#toc)\\]\n",
+    "## Step 4.a: Code Validation against `GiRaFFEfood_HO.GiRaFFEfood_HO` NRPy+ module  \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation1}$$\n",
     "\n",
     "Here, as a code validation check, we verify agreement in the SymPy expressions for the $\\texttt{GiRaFFE}$ Exact Wald initial data equations  we intend to use between\n",
     "1. this tutorial and \n",
-    "2. the NRPy+ [GiRaFFEfood_HO.py](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO.py) module.\n"
+    "2. the NRPy+ [GiRaFFEfood_HO.GiRaFFEfood_HO](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO.py) module.\n"
    ]
   },
   {
@@ -366,12 +372,12 @@
    "source": [
     "<a id='code_validation2'></a>\n",
     "\n",
-    "## Step 5.a: Code Validation against GiRaFFEfood_HO/GiRaFFEfood_HO NRPy+ module \\[Back to [top](#toc)\\]\n",
+    "## Step 5.a: Code Validation against `GiRaFFEfood_HO.GiRaFFEfood_HO` NRPy+ module \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation2}$$\n",
     "\n",
     "Here, as a code validation check, we verify agreement in the SymPy expressions for the $\\texttt{GiRaFFE}$ Exact Wald initial data equations  we intend to use between\n",
     "1. this tutorial and \n",
-    "2. the NRPy+ [GiRaFFEfood_HO.py](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO.py) module.\n"
+    "2. the NRPy+ [GiRaFFEfood_HO.GiRaFFEfood_HO](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO.py) module.\n"
    ]
   },
   {
