--- a/Tutorial-GiRaFFEfood_HO_Aligned_Rotator.ipynb
+++ b/Tutorial-GiRaFFEfood_HO_Aligned_Rotator.ipynb
@@ -9,6 +9,12 @@
     "## Author: Zach Etienne & Patrick Nelson\n",
     "### Formatting improvements courtesy Brandon Clark\n",
     "\n",
+    "[comment]: <> (Abstract: TODO)\n",
+    "\n",
+    "**Module Status:** <font color='orange'><b> Self-Validated </b></font>\n",
+    "\n",
+    "**Validation Notes:** This tutorial module has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). **Additional validation tests may have been performed, but are as yet, undocumented. (TODO)**\n",
+    "\n",
     "### NRPy+ Source Code for this module: [GiRaFFEfood_HO_Aligned_Rotator.py](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO_Aligned_Rotator.py)\n",
     "\n",
     "## Introduction: \n",
@@ -33,7 +39,7 @@
     "1. [Step 2](#set_aphi): Set the vector $A_{\\phi}$ Spherical coordinates \n",
     "1. [Step 3](#jacobian): Use the Jacobian matrix to transform the vectors to Cartesian coordinates\n",
     "1. [Step 4](#vi): Calculate $v^i$\n",
-    "1. [Step 5](#code_validation): Code Validation against GiRaFFEfood_HO/GiRaFFEfood_HO_Aligned_Rotator NRPy+ Module\n",
+    "1. [Step 5](#code_validation): `Code Validation against GiRaFFEfood_HO.GiRaFFEfood_HO_Aligned_Rotator` NRPy+ Module\n",
     "1. [Step 6](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF file"
    ]
   },
@@ -151,7 +157,7 @@
     "                                       [sp.diff(rfm.xxSph[2],rfm.xx[0]), sp.diff(rfm.xxSph[2],rfm.xx[1]), sp.diff(rfm.xxSph[2],rfm.xx[2])]])\n",
     "#dx__drrefmetric_0UDmatrix = drrefmetric__dx_0UDmatrix.inv() # We don't actually need this in this case.\n",
     "\n",
-    "AD = ixp.register_gridfunctions_for_single_rank1(\"EVOL\",\"AD\")\n",
+    "AD = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"AD\")\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        AD[i] = drrefmetric__dx_0UDmatrix[(j,i)]*ASphD[j]\n",
@@ -208,13 +214,13 @@
    "source": [
     "<a id='code_validation'></a>\n",
     "\n",
-    "# Step 5: Code Validation against GiRaFFEfood_HO/GiRaFFEfood_HO_Aligned_Rotator NRPy+ Module  \\[Back to [top](#toc)\\]\n",
+    "# Step 5: Code Validation against `GiRaFFEfood_HO.GiRaFFEfood_HO_Aligned_Rotator` NRPy+ Module  \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation}$$\n",
     "\n",
     "Here, as a code validation check, we verify agreement in the SymPy expressions for the $\\texttt{GiRaFFE}$ Aligned Rotator initial data equations we intend to use between\n",
     "\n",
     "1. this tutorial and \n",
-    "2. the NRPy+ [GiRaFFEfood_HO_Aligned_Rotator](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO_Aligned_Rotator.py) module."
+    "2. the NRPy+ [GiRaFFEfood_HO.GiRaFFEfood_HO_Aligned_Rotator](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO_Aligned_Rotator.py) module."
    ]
   },
   {
@@ -292,7 +298,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-GiRaFFEfood_HO_Aligned_Rotator.ipynb to latex\n",
-      "[NbConvertApp] Writing 37989 bytes to Tutorial-GiRaFFEfood_HO_Aligned_Rotator.tex\n",
+      "[NbConvertApp] Writing 42994 bytes to Tutorial-GiRaFFEfood_HO_Aligned_Rotator.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -316,21 +322,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
