--- a/Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb
+++ b/Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb
@@ -8,9 +8,17 @@
     "## Author: Zach Etienne\n",
     "### Formatting improvements courtesy Brandon Clark\n",
     "\n",
+    "[comment]: <> (Abstract: TODO)\n",
+    "\n",
+    "### This module is meant for use only with initial data that can be represented numerically in ADM form, either in the Spherical or Cartesian basis. I.e., the ADM variables are given $\\left\\{\\gamma_{ij}, K_{ij}, \\alpha, \\beta^i\\right\\}$ *numerically* as functions of $(r,\\theta,\\phi)$ or $(x,y,z)$; e.g., through an initial data solver. If instead the ADM initial data are provided as exact (algebraic) functions of $(r,\\theta,\\phi)$ or $(x,y,z)$, then is is better to use [the Exact-ADM-Spherical/Cartesian-to-BSSNCurvilinear module](Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb) instead.\n",
+    "\n",
+    "**Module Status:** <font color='orange'><b> Self-Validated </b></font>\n",
+    "\n",
+    "**Validation Notes:** This tutorial module has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). **Additional validation tests may have been performed, but are as yet, undocumented. (TODO)**\n",
+    "\n",
     "### NRPy+ Source Code for this module: [BSSN/ADM_Numerical_Spherical_or_Cartesian_to_BSSNCurvilinearID.py](../edit/BSSN/ADM_Numerical_Spherical_or_Cartesian_to_BSSNCurvilinearID.py)\n",
     "\n",
-    "**This module is meant for use only with initial data that can be represented numerically in ADM form, either in the Spherical or Cartesian basis. I.e., the ADM variables are given $\\left\\{\\gamma_{ij}, K_{ij}, \\alpha, \\beta^i\\right\\}$ *numerically* as functions of $(r,\\theta,\\phi)$ or $(x,y,z)$; e.g., through an initial data solver. If instead the ADM initial data are provided as exact (algebraic) functions of $(r,\\theta,\\phi)$ or $(x,y,z)$, then is is better to use [the Exact-ADM-Spherical/Cartesian-to-BSSNCurvilinear module](Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb) instead.** \n",
+    "\n",
     "\n",
     "## Introduction:\n",
     "Given the ADM variables:\n",
@@ -21,7 +29,7 @@
     "\n",
     "$$\\left\\{\\bar{\\gamma}_{i j},\\bar{A}_{i j},\\phi, K, \\bar{\\Lambda}^{i}, \\alpha, \\beta^i, B^i\\right\\},$$ \n",
     "\n",
-    "in the desired curvilinear basis (given by reference_metric::CoordSystem). Then it rescales the resulting BSSNCurvilinear variables (as defined in [the BSSN Curvilinear tutorial](Tutorial-BSSNCurvilinear.ipynb)) into the form needed for BSSNCurvilinear evolutions:\n",
+    "in the desired curvilinear basis (given by `reference_metric::CoordSystem`). Then it rescales the resulting BSSNCurvilinear variables (as defined in [the BSSN Curvilinear tutorial](Tutorial-BSSNCurvilinear.ipynb)) into the form needed for BSSNCurvilinear evolutions:\n",
     "\n",
     "$$\\left\\{h_{i j},a_{i j},\\phi, K, \\lambda^{i}, \\alpha, \\mathcal{V}^i, \\mathcal{B}^i\\right\\}.$$ \n",
     "\n",
@@ -37,21 +45,21 @@
     "# Table of Contents\n",
     "$$\\label{toc}$$ \n",
     "\n",
-    "The module is organized as follows:\n",
+    "This module is organized as follows\n",
     "\n",
     "1. [Step 1](#initializenrpy): Initialize core Python/NRPy+ modules\n",
     "1. [Step 2](#cylindrical): Desired output BSSN Curvilinear coordinate system set to Cylindrical, as a proof-of-principle\n",
     "1. [Step 3](#admfunc): Setting ADM variables through initial data solver C function\n",
-    "1. [Step 4](#adm_jacobian): Applying Jacobian transformations to get in the correct $xx0,xx1,xx2$ basis\n",
+    "1. [Step 4](#adm_jacobian): Applying Jacobian transformations to get in the correct `xx0,xx1,xx2` basis\n",
     "1. [Step 5](#adm2bssn): Perform the ADM-to-BSSN conversion for 3-metric, extrinsic curvature, and gauge quantities\n",
     "    1. [Step 5.a](#adm2bssn_gamma): Convert ADM $\\gamma_{ij}$ to BSSN $\\bar{\\gamma}_{ij}$\n",
     "    1. [Step 5.b](#admexcurv_convert): Convert the ADM extrinsic curvature $K_{ij}$\n",
-    "    1. [Step 5.c](#conformal): Define the conformal factor variable $\\texttt{cf}$\n",
+    "    1. [Step 5.c](#conformal): Define the conformal factor variable `cf`\n",
     "1. [Step 6](#rescale): Rescale tensorial quantities\n",
     "1. [Step 7](#adm2bssn_c): Output all ADM-to-BSSN expressions to a C function \n",
     "    1. [Step 7.a](#driver): Output the driver function for the above C function\n",
     "1. [Step 8](#lambda): Compute $\\bar{\\Lambda}^i$ from finite-difference derivatives of rescaled metric quantities\n",
-    "1. [Step 9](#code_validation): Code Validation against BSSN.ADM_Numerical_Spherical_or_Cartesian_to_BSSNCurvilinear NRPy+ module\n",
+    "1. [Step 9](#code_validation): Code Validation against `BSSN.ADM_Numerical_Spherical_or_Cartesian_to_BSSNCurvilinear` NRPy+ module\n",
     "1. [Step 10](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF"
    ]
   },
@@ -126,7 +134,7 @@
     "# Step 3: Setting ADM variables through initial data solver C function \\[Back to [top](#toc)\\]\n",
     "$$\\label{admfunc}$$\n",
     "\n",
-    "Given $(r,\\theta,\\phi)$ or $(x,y,z)$, we assume the initial data solver provides a C function ID_ADM_SphorCart({$(r,\\theta,\\phi)$ or $(x,y,z)$}, {ADM variables}) that sets all ADM variables in the spherical or Cartesian basis, respectively. Here, as a validation test, we set up this function for UIUC Black Hole initial data."
+    "Given $(r,\\theta,\\phi)$ or $(x,y,z)$, we assume the initial data solver provides a C function `ID_ADM_SphorCart`({$(r,\\theta,\\phi)$ or $(x,y,z)$}, {ADM variables}) that sets all ADM variables in the spherical or Cartesian basis, respectively. Here, as a validation test, we set up this function for UIUC Black Hole initial data."
    ]
   },
   {
@@ -183,13 +191,13 @@
    "source": [
     "<a id='adm_jacobian'></a>\n",
     "\n",
-    "# Step 4:  Applying Jacobian transformations to get in the correct $xx0,xx1,xx2$ basis \\[Back to [top](#toc)\\]\n",
+    "# Step 4:  Applying Jacobian transformations to get in the correct `xx0,xx1,xx2` basis \\[Back to [top](#toc)\\]\n",
     "$$\\label{adm_jacobian}$$\n",
     "\n",
     "\n",
     "The following discussion holds for either Spherical or Cartesian input data, so for simplicity let's just assume the data are given in Spherical coordinates.\n",
     "\n",
-    "All ADM tensors and vectors are in the Spherical coordinate basis $x^i_{\\rm Sph} = (r,\\theta,\\phi)$, but we need them in the curvilinear coordinate basis $x^i_{\\rm rfm}= ({\\rm xx0},{\\rm xx1},{\\rm xx2})$ set by the \"reference_metric::CoordSystem\" variable. Empirically speaking, it is far easier to write $(x({\\rm xx0},{\\rm xx1},{\\rm xx2}),y({\\rm xx0},{\\rm xx1},{\\rm xx2}),z({\\rm xx0},{\\rm xx1},{\\rm xx2}))$ than the inverse, so we will compute the Jacobian matrix\n",
+    "All ADM tensors and vectors are in the Spherical coordinate basis $x^i_{\\rm Sph} = (r,\\theta,\\phi)$, but we need them in the curvilinear coordinate basis $x^i_{\\rm rfm}=$`(xx0,xx1,xx2)` set by the `\"reference_metric::CoordSystem\"` variable. Empirically speaking, it is far easier to write `(x(xx0,xx1,xx2),y(xx0,xx1,xx2),z(xx0,xx1,xx2))` than the inverse, so we will compute the Jacobian matrix\n",
     "\n",
     "$$\n",
     "{\\rm Jac\\_dUSph\\_dDrfmUD[i][j]} = \\frac{\\partial x^i_{\\rm Sph}}{\\partial x^j_{\\rm rfm}},\n",
@@ -200,7 +208,7 @@
     "{\\rm Jac\\_dUrfm\\_dDSphUD[i][j]} = \\frac{\\partial x^i_{\\rm rfm}}{\\partial x^j_{\\rm Sph}},\n",
     "$$\n",
     "\n",
-    "using NRPy+'s ${\\rm generic\\_matrix\\_inverter3x3()}$ function. In terms of these, the transformation of BSSN tensors from Spherical to \"reference_metric::CoordSystem\" coordinates may be written:\n",
+    "using NRPy+'s `generic_matrix_inverter3x3()` function. In terms of these, the transformation of BSSN tensors from Spherical to `\"reference_metric::CoordSystem\"` coordinates may be written:\n",
     "\n",
     "\\begin{align}\n",
     "\\beta^i_{\\rm rfm} &= \\frac{\\partial x^i_{\\rm rfm}}{\\partial x^\\ell_{\\rm Sph}} \\beta^\\ell_{\\rm Sph}\\\\\n",
@@ -289,7 +297,7 @@
     "# Step 5: Perform the ADM-to-BSSN conversion for 3-metric, extrinsic curvature, and gauge quantities \\[Back to [top](#toc)\\]\n",
     "$$\\label{adm2bssn}$$\n",
     "\n",
-    "All ADM quantities were input into this function in the Spherical or Cartesian basis, as functions of r,th,ph or x,y,z, respectively. In Steps 1 and 2 above, we converted them to the xx0,xx1,xx2 basis, and as functions of xx0,xx1,xx2. Here we convert ADM quantities to their BSSN Curvilinear counterparts.\n",
+    "All ADM quantities were input into this function in the Spherical or Cartesian basis, as functions of $r,\\theta,\\phi$ or $x,y,z$, respectively. In [Step 3](#admfunc) and [Step 4](#adm_jacobian) above, we converted them to the `xx0,xx1,xx2` basis, and as functions of `xx0,xx1,xx2`. Here we convert ADM quantities to their BSSN Curvilinear counterparts.\n",
     "\n"
    ]
   },
@@ -368,21 +376,21 @@
     "## Step 5.c: Define the conformal factor variable $\\texttt{cf}$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{conformal}$$\n",
     "\n",
-    "We define the conformal factor variable $\\texttt{cf}$ based on the setting of the \"BSSN_quantities::EvolvedConformalFactor_cf\" parameter.\n",
+    "We define the conformal factor variable `cf` based on the setting of the `\"BSSN_quantities::EvolvedConformalFactor_cf\"` parameter.\n",
     "\n",
-    "For example if \"EvolvedConformalFactor_cf\" is set to \"phi\", we can use Eq. 3 of [Ruchlin *et al.*](https://arxiv.org/pdf/1712.07658.pdf), which in arbitrary coordinates is written:\n",
+    "For example if `\"EvolvedConformalFactor_cf\"` is set to `\"phi\"`, we can use Eq. 3 of [Ruchlin *et al.*](https://arxiv.org/pdf/1712.07658.pdf), which in arbitrary coordinates is written:\n",
     "\n",
     "$$\n",
     "\\phi = \\frac{1}{12} \\log\\left(\\frac{\\gamma}{\\bar{\\gamma}}\\right).\n",
     "$$\n",
     "\n",
-    "Alternatively if \"BSSN_RHSs::EvolvedConformalFactor_cf\" is set to \"chi\", then\n",
+    "Alternatively if `\"BSSN_RHSs::EvolvedConformalFactor_cf\"` is set to `\"chi\"`, then\n",
     "$$\n",
     "\\chi = e^{-4 \\phi} = \\exp\\left(-4 \\frac{1}{12} \\left(\\frac{\\gamma}{\\bar{\\gamma}}\\right)\\right) \n",
     "= \\exp\\left(-\\frac{1}{3} \\log\\left(\\frac{\\gamma}{\\bar{\\gamma}}\\right)\\right) = \\left(\\frac{\\gamma}{\\bar{\\gamma}}\\right)^{-1/3}.\n",
     "$$\n",
     "\n",
-    "Finally if \"BSSN_RHSs::EvolvedConformalFactor_cf\" is set to \"W\", then\n",
+    "Finally if `\"BSSN_RHSs::EvolvedConformalFactor_cf\"` is set to `\"W\"`, then\n",
     "$$\n",
     "W = e^{-2 \\phi} = \\exp\\left(-2 \\frac{1}{12} \\log\\left(\\frac{\\gamma}{\\bar{\\gamma}}\\right)\\right) = \n",
     "\\exp\\left(-\\frac{1}{6} \\log\\left(\\frac{\\gamma}{\\bar{\\gamma}}\\right)\\right) = \n",
@@ -462,7 +470,7 @@
     "# Step 7: Output all ADM-to-BSSN expressions to a C function \\[Back to [top](#toc)\\]\n",
     "$$\\label{adm2bssn_c}$$\n",
     "\n",
-    "This function must first call the ID_ADM_SphorCart() defined above. Using these Spherical or Cartesian data, it sets up all quantities needed for BSSNCurvilinear initial data, *except* $\\lambda^i$, which must be computed from numerical data using finite-difference derivatives."
+    "This function must first call the `ID_ADM_SphorCart()` defined above. Using these Spherical or Cartesian data, it sets up all quantities needed for BSSNCurvilinear initial data, *except* $\\lambda^i$, which must be computed from numerical data using finite-difference derivatives."
    ]
   },
   {
@@ -661,7 +669,7 @@
    "source": [
     "<a id='code_validation'></a>\n",
     "\n",
-    "# Step 9: Code Validation against  BSSN.ADM_Numerical_Spherical_or_Cartesian_to_BSSNCurvilinear NRPy+ module \\[Back to [top](#toc)\\]\n",
+    "# Step 9: Code Validation against  `BSSN.ADM_Numerical_Spherical_or_Cartesian_to_BSSNCurvilinear` NRPy+ module \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation}$$\n",
     "\n",
     "Here, as a code validation check, we verify agreement in the C codes for converting \"numerical\" UIUCBlackHole initial data (in Spherical coordinates/basis) to BSSN Curvilinear data in Cylindrical coordinates/basis between\n",
@@ -693,7 +701,6 @@
     }
    ],
    "source": [
-    "\n",
     "!mv BSSN/ID_BSSN_lambdas.h BSSN/ID_BSSN_lambdas.h-ADM_Num_ID_validation\n",
     "!mv BSSN/ID_BSSN__ALL_BUT_LAMBDAs.h BSSN/ID_BSSN__ALL_BUT_LAMBDAs.h-ADM_Num_ID_validation\n",
     "!mv BSSN/ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs.h BSSN/ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs.h-ADM_Num_ID_validation\n",
@@ -743,7 +750,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb to latex\n",
-      "[NbConvertApp] Writing 86695 bytes to Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.tex\n",
+      "[NbConvertApp] Writing 88357 bytes to Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -767,21 +774,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
