--- a/Tutorial-FishboneMoncriefID.ipynb
+++ b/Tutorial-FishboneMoncriefID.ipynb
@@ -9,10 +9,14 @@
     "## Author: Zach Etienne\n",
     "### Formatting improvements courtesy Brandon Clark\n",
     "\n",
+    "[comment]: <> (Abstract: TODO)\n",
+    "\n",
+    "[comment]: <> (Module Status and Validation Notes: TODO)\n",
+    "\n",
     "### NRPy+ Source Code for this module: [FishboneMoncriefID/FishboneMoncriefID.py](../edit/FishboneMoncriefID/FishboneMoncriefID.py)\n",
     "\n",
     "## Introduction:\n",
-    "This goal of this module will be to construct Fishbone-Moncrief initial data for GRMHD simulations in a format suitable for the Einstein Toolkit (ETK). We will be using the equations as derived in [the original paper](http://articles.adsabs.harvard.edu/cgi-bin/nph-iarticle_query?1976ApJ...207..962F&amp;data_type=PDF_HIGH&amp;whole_paper=YES&amp;type=PRINTER&amp;filetype=.pdf), which will hereafter be called \"the FM paper\". Since we want to use this with the ETK, our final result will be in Cartesian coordinates. The natural coordinate system for these data is spherical, however, so we will use reference_metric.py to help with the coordinate transformation.\n",
+    "This goal of this module will be to construct Fishbone-Moncrief initial data for GRMHD simulations in a format suitable for the Einstein Toolkit (ETK). We will be using the equations as derived in [the original paper](http://articles.adsabs.harvard.edu/cgi-bin/nph-iarticle_query?1976ApJ...207..962F&amp;data_type=PDF_HIGH&amp;whole_paper=YES&amp;type=PRINTER&amp;filetype=.pdf), which will hereafter be called \"***the FM paper***\". Since we want to use this with the ETK, our final result will be in Cartesian coordinates. The natural coordinate system for these data is spherical, however, so we will use reference_metric.py to help with the coordinate transformation.\n",
     "\n",
     "This notebook documents the equations in the NRPy+ module [FishboneMoncrief.py](../edit/FishboneMoncriefID/FishboneMoncriefID.py).  Then, we will build an Einstein Toolkit [thorn](Tutorial-ETK_thorn-FishboneMoncriefID.ipynb) to set this initial data."
    ]
@@ -44,7 +48,7 @@
     "    1. [Step 2.l](#lorentz_fac_valencia): Lorentz factor $\\Gamma = \\alpha u^0$ and Valencia 3-velocity $v^i_{(n)}$ \n",
     "1. [Step 3](#output_to_c): Output SymPy expressions to C code, using NRPy+\n",
     "    \n",
-    "1. [Step 4](#code_validation): Code Validation against Code Validation against FishboneMoncriefID.FishboneMoncriefID NRPy+ module NRPy+ module \n",
+    "1. [Step 4](#code_validation): Code Validation against Code Validation against `FishboneMoncriefID.FishboneMoncriefID` NRPy+ module NRPy+ module \n",
     "1. [Step 5](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF"
    ]
   },
@@ -223,7 +227,7 @@
     "\\begin{align}\n",
     "\\text{tmp3in} &= \\sqrt{\\frac{1 + 4 l^2 \\Sigma_{\\rm in}^2 \\Delta_{\\rm in}}{A_{\\rm in} \\sin^2 (\\theta)}}, \\\\\n",
     "\\end{align}\n",
-    "corresponding to the radially INdependent part of log(enthalpy), `ln_h`:\n",
+    "corresponding to the radially Independent part of log(enthalpy), $\\ln h$:\n",
     "\\begin{align}\n",
     "{\\rm mln\\_h\\_in} = -\\frac{1}{2} * \\log \\left( \\frac{1+\\text{tmp3in}}{\\Sigma_{\\rm in} \\Delta_{\\rm in}/A_{\\rm in}} \\right) + \\frac{1}{2} \\text{tmp3in} + \\frac{2aMr_{\\rm in}l}{A_{\\rm in}}. \\\\\n",
     "\\end{align}\n",
@@ -270,7 +274,7 @@
     "## Step 2.d: Pressure and density, from the specific enthalpy \\[Back to [top](#toc)\\]\n",
     "$$\\label{pressure_density}$$\n",
     "\n",
-    "Python 3.4 + sympy 1.0.0 has a serious problem taking the power here; it hangs forever, so instead we use the identity $x^{1/y} = \\exp(\\frac{1}{y} * \\log(x))$. Thus, our expression for density becomes (in Python 2.7 + sympy 0.7.4.1):\n",
+    "Python 3.4 + SymPy 1.0.0 has a serious problem taking the power here; it hangs forever, so instead we use the identity $x^{1/y} = \\exp(\\frac{1}{y} * \\log(x))$. Thus, our expression for density becomes (in Python 2.7 + SymPy 0.7.4.1):\n",
     "\n",
     "\\begin{align}\n",
     "\\rho_0 &= \\left( \\frac{(h-1)(\\gamma-1)}{\\kappa \\gamma} \\right)^{1/(\\gamma-1)} \\\\\n",
@@ -419,7 +423,7 @@
     "## Step 2.g: Transform components of four-velocity $u^\\mu$ to Kerr-Schild \\[Back to [top](#toc)\\]\n",
     "$$\\label{xform_to_ks}$$\n",
     "\n",
-    "Now, we will transform the 4-velocity from the Boyer-Lindquist to the Kerr-Schild basis. This algorithm is adapted from [HARM](https://github.com/atchekho/harmpi/blob/master/init.c). This definees the tensor $\\text{transformBLtoKS}$, where the diagonal elements are $1$, and the non-zero off-diagonal elements are \n",
+    "Now, we will transform the 4-velocity from the Boyer-Lindquist to the Kerr-Schild basis. This algorithm is adapted from [HARM](https://github.com/atchekho/harmpi/blob/master/init.c). This definees the tensor `transformBLtoKS`, where the diagonal elements are $1$, and the non-zero off-diagonal elements are \n",
     "\\begin{align}\n",
     "\\text{transformBLtoKS}_{tr} &= \\frac{2r}{r^2-2r+a^2} \\\\\n",
     "\\text{transformBLtoKS}_{\\phi r} &=  \\frac{a}{r^2-2r+a^2} \\\\\n",
@@ -537,7 +541,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We must also compute the inverse and determinant of the KS metric. We can use the NRPy+ indexed_exp.py function to do this easily for the inverse physical 3-metric $\\gamma^{ij}$, and then use the lapse $\\alpha$ and the shift $\\beta^i$ to find the full, inverse 4-dimensional metric, $g^{ij}$. We use the general form relating the 3- and 4- metric from (B&S 2.122)\n",
+    "We must also compute the inverse and determinant of the KS metric. We can use the NRPy+ [indexedexp.py](../edit/indexedexp.py) function to do this easily for the inverse physical 3-metric $\\gamma^{ij}$, and then use the lapse $\\alpha$ and the shift $\\beta^i$ to find the full, inverse 4-dimensional metric, $g^{ij}$. We use the general form relating the 3- and 4- metric from (B&S 2.122)\n",
     "\\begin{equation}\n",
     "g_{\\mu\\nu} = \\begin{pmatrix} \n",
     "-\\alpha^2 + \\beta\\cdot\\beta & \\beta_i \\\\\n",
@@ -794,7 +798,7 @@
     "## Step 3: Output above-generated expressions to C code, using NRPy+ \\[Back to [top](#toc)\\]\n",
     "$$\\label{output_to_c}$$\n",
     "\n",
-    "Finally, we have contructed the underlying expressions necessary for the Fishbone-Moncrief initial data. By means of demonstration, we will use NRPy+'s FD_outputC to print the expressions. (The actual output statements are commented out right now, to save time in testing.)"
+    "Finally, we have contructed the underlying expressions necessary for the Fishbone-Moncrief initial data. By means of demonstration, we will use NRPy+'s `FD_outputC()` to print the expressions. (The actual output statements are commented out right now, to save time in testing.)"
    ]
   },
   {
@@ -867,7 +871,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will now use the relationships between coordinate systems provided by reference_metric.py to convert our expressions to Cartesian coordinates. See [Tutorial-Reference_Metric](Tutorial-Reference_Metric.ipynb) for more detail."
+    "We will now use the relationships between coordinate systems provided by [reference_metric.py](../edit/reference_metric.py) to convert our expressions to Cartesian coordinates. See [Tutorial-Reference_Metric](Tutorial-Reference_Metric.ipynb) for more detail."
    ]
   },
   {
@@ -988,7 +992,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To verify this against the old version of FishboneMoncriefID from the old version of NRPy, we use the mathematica_code output function. "
+    "To verify this against the old version of FishboneMoncriefID from the old version of NRPy, we use the `mathematica_code()` output function. "
    ]
   },
   {
@@ -1031,7 +1035,7 @@
    "source": [
     "<a id='code_validation'></a>\n",
     "\n",
-    "# Step 4: Code Validation against FishboneMoncriefID.FishboneMoncriefID NRPy+ module \\[Back to [top](#toc)\\]\n",
+    "# Step 4: Code Validation against `FishboneMoncriefID.FishboneMoncriefID` NRPy+ module \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation}$$\n",
     "\n",
     "Here, as a code validation check, we verify agreement in the SymPy expressions for these Fishbone-Moncrief initial data between\n",
@@ -1162,21 +1166,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
